--- a/css/style.css
+++ b/css/style.css
@@ -54,8 +54,7 @@ section > div > h1 {
     border-radius: 5px;
     padding: 5px;
     background-color: var(--pink);
-    color: white;
-    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.664);
+    color: rgb(0, 0, 0);
 }
 
 .input-passwd {
@@ -64,8 +63,7 @@ section > div > h1 {
     border-radius: 5px;
     padding: 5px;
     background-color: var(--pink);
-    color: white;
-    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.664);
+    color: rgb(0, 0, 0);
 }
 
 
