--- a/css/mediaquery-tablet.css
+++ b/css/mediaquery-tablet.css
@@ -1,43 +1,45 @@
-/*
-    Color palette: 
-        pink: rgb(228, 170, 228);
-
-*/
-
 @charset "UTF-8";
 
-@media screen and (max-width: 768px) {
 
-    * {
-        padding: 0;
-        margin: 0;
-        font-family: Georgia, 'Times New Roman', Times, serif;
-    }
+/* TABLET */
+@media screen and (min-width: 768px) and (max-width: 992px) {
 
     :root {
         --pink: rgb(228, 170, 228);
     }
 
+    * {
+        padding: 0;
+        margin: 0;
+    }
+
     body {
-        background-color: var(--pink);
+        background-color: rgb(228, 170, 228);
     }
 
     .main-container {
         background-color: white;
         text-align: center;
-        width: 250px;
+        width: 614px;
+        height: 253px;
         margin: auto;
         margin-top: 100px;
         border-radius: 10px;
         box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.342);
     }
 
+    div {
+        display: inline-block;
+    }
+
     img {
-        max-width: 250px;
-        border-radius: 10px 10px 0px 0px;
+        max-width:380px;
+        border-radius: 10px 0px 0px 10px;
     }
 
     section > div > h1 {
+        display: flex;
+        justify-content: center;
         margin-top: 10px;
         font-size: 20px;
     }
@@ -47,30 +49,38 @@
         font-size: 12px;
     }
 
-    
     /* INPUTs */
-
     .input-login {
-        margin: 10px 10px 2px 10px;
+        margin: 10px 10px 2px 0px;
         border: 1px solid var(--pink);
         border-radius: 5px;
-        padding: 5px;
+        margin-top: 20px;
+        padding-top: 5px;
+        padding-bottom: 5px;
         background-color: var(--pink);
         color: rgb(0, 0, 0);
     }
 
     .input-passwd {
-        margin: 4px 10px 0px 10px;
         border: 1px solid var(--pink);
         border-radius: 5px;
-        padding: 5px;
+        padding-top: 5px;
+        padding-bottom: 5px;
         background-color: var(--pink);
         color: rgb(0, 0, 0);
+    } 
+
+
+    /* BUTTON */
+
+    .buttonLoginP {
+        height: 70px;
     }
 
-
-    /* BOTÃO */
-
+    .buttonForgotP {
+        
+    }
+    
     .buttonLogin a, .buttonForgot a {
         text-decoration: none;
     }
@@ -78,7 +88,7 @@
     .buttonLogin {
         font-weight: bold;
         margin-top: 20px;
-        padding: 6px 94px;
+        padding: 6px 93px;
         border-radius: 10px;
         border: 1px solid blueviolet;
     }
@@ -90,8 +100,7 @@
 
     .buttonForgot {
         font-weight: bold;
-        margin: 10px 0px;
-        padding: 6px 90px;
+        padding: 6px 89px;
         border-radius: 10px;
         border: 1px solid rgb(226, 43, 113);
     }
