--- a/css/style.css
+++ b/css/style.css
@@ -1,115 +1,63 @@
 /*
-    Color palette: 
-        pink: rgb(228, 170, 228);
-
+    Color palette:
+        Green: #49a09d
+        Lilac: #5f2c82
 */
 
 @charset "UTF-8";
 
-@media screen and (max-width: 768px) {
-
-    * {
-        padding: 0;
-        margin: 0;
-        font-family: Georgia, 'Times New Roman', Times, serif;
-    }
-
-    :root {
-        --pink: rgb(228, 170, 228);
-    }
-
-    body {
-        background-color: var(--pink);
-    }
-
-    .main-container {
-        background-color: white;
-        text-align: center;
-        width: 250px;
-        margin: auto;
-        margin-top: 100px;
-        border-radius: 10px;
-        box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.342);
-    }
-
-    img {
-        max-width: 250px;
-        border-radius: 10px 10px 0px 0px;
-    }
-
-    section > div > h1 {
-        margin-top: 10px;
-        font-size: 20px;
-    }
-
-    .message-below-login {
-        margin-top: 20px;
-        font-size: 12px;
-    }
-
-    
-    /* INPUTs */
-
-    .input-login {
-        margin: 10px 10px 2px 10px;
-        border: 1px solid var(--pink);
-        border-radius: 5px;
-        padding: 5px;
-        background-color: var(--pink);
-        color: rgb(0, 0, 0);
-    }
-
-    .input-passwd {
-        margin: 4px 10px 0px 10px;
-        border: 1px solid var(--pink);
-        border-radius: 5px;
-        padding: 5px;
-        background-color: var(--pink);
-        color: rgb(0, 0, 0);
-    }
+:root {
+    --green: #49a09d;
+    --lilac: #5f2c82;
+}
 
 
-    /* BOTÃO */
-
-    .buttonLogin a, .buttonForgot a {
-        text-decoration: none;
-    }
-
-    .buttonLogin {
-        font-weight: bold;
-        margin-top: 20px;
-        padding: 6px 94px;
-        border-radius: 10px;
-        border: 1px solid blueviolet;
-    }
-
-    .buttonLogin:hover {
-        background-color: blueviolet;
-        color: white;
-    }
-
-    .buttonForgot {
-        font-weight: bold;
-        margin: 10px 0px;
-        padding: 6px 90px;
-        border-radius: 10px;
-        border: 1px solid rgb(226, 43, 113);
-    }
-
-    .buttonForgot:hover {
-        background-color: rgb(226, 43, 113);
-        color: white;
-    }
+* {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    padding: 0px;
+    margin: 0px;
+    box-sizing: border-box; /* Border is part of the width account */
+}
 
 
-    footer {
-        position: fixed;
-        background-color: white;
-        color: rgba(0, 0, 0, 0.750);
-        text-align: center;
-        font-style: italic;
-        width: 100%;
-        bottom: 0;
-    }
+html, body {
+    background-color: var(--lilac);
+    height: 100vh;
+    width: 100vw;
+}
 
+main {
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+}
+
+.container-class {
+    position: absolute;
+    background-color: white;
+    width: 250px;
+    height: 500px;
+    border-radius: 20px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    overflow: hidden;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.452);
+}
+
+
+/* IMG */
+.container-class > .container-img-class {
+    display: block;
+    background: var(--lilac) url(../image/img-welcome.jpg) no-repeat;
+    background-size: cover;
+    background-position: center center;
+    height: 200px;
+}
+
+
+/* FORM */
+.container-class > .container-form-class {
+    display: block;
+    padding: 10px;
 }
