--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
     Color palette:
         Green: #49a09d
         Lilac: #5f2c82
+        Pink: rgb(243, 112, 232)
 */
 
 @charset "UTF-8";
@@ -9,6 +10,7 @@
 :root {
     --green: #49a09d;
     --lilac: #5f2c82;
+    --pink: rgb(243, 112, 232);
 }
 
 
@@ -21,7 +23,7 @@
 
 
 html, body {
-    background-color: var(--lilac);
+    background-color: var(--pink);
     height: 100vh;
     width: 100vw;
 }
@@ -62,4 +64,13 @@ main {
 .container-class > .container-form-class {
     display: block;
     padding: 10px;
+}
+
+.container-class > .container-form-class > h1 {
+    text-align: center;
+    margin-bottom: 10px;
+}
+
+.container-class > .container-form-class > p {
+    font-size: .8em;
 }
