--- a/css/media-query.css
+++ b/css/media-query.css
@@ -24,6 +24,7 @@
 
     .container-class {
         width: 80vw;
+        height: 280px;
     }
 
     body{
@@ -55,6 +56,7 @@
 
     .container-class {
         width: 950px;
+        height: 350px;
     }
 
     body{
@@ -82,7 +84,13 @@
     }
 
     .container-class > .container-form-class > p {
-        font-size: 1.2em;
+        font-size: 1em;
+        margin: 20px 0px;
+    }
+
+
+    form > input[type = submit] {
+        margin-top: 15px;
     }
 
 }
