--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@
     --lilac: #5f2c82;
     --stronglilac: #421e5a;
     --pink: rgb(243, 112, 232);
+    --lightpink: rgb(233, 163, 227);
     --strongtpink: rgb(184, 68, 174);
 }
 
@@ -66,11 +67,35 @@ main {
 .container-form-label-class {
     display: block;
     background-color: var(--pink);
+    border: 2px solid var(--pink);
     width: 100%;
     height: 40px;
-    border-radius: 5px;
+    border-radius: 8px;
     margin: 5px 0px;
 }
+
+.container-form-label-class > .material-icons { 
+    color: var(--lilac);
+    font-weight: bold;
+    font-size: 2em;
+    width: 40px;
+    padding: 5px;
+}
+
+.container-form-label-class > input {
+    background-color: var(--lightpink);
+    font-size: 1em;
+    width: calc(100% - 45px);
+    height: 100%;
+    transform: translateY(-12px);
+    border: none;
+    border-radius: 8px;
+    padding: 4px;
+}
+
+.container-form-label-class > input:focus-within {
+    background-color: white;
+} 
 
 label {
     display: none;
